--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
 
         <!-- Other Activities -->
         <activity android:name=".HomeActivity" android:exported="true" />
+        <activity android:name=".CreateNewLutemon" android:exported="true" />
 
     </application>
 
