--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".HomeActivity" android:exported="true" />
         <activity android:name=".CreateNewLutemon" android:exported="true" />
         <activity android:name=".FragmentsActivity" android:exported="true" />
+        <activity android:name=".BattleActivity" android:exported="true" />
 
     </application>
 
